--- a/H_FamilyList_FP/tests/test.ipynb
+++ b/H_FamilyList_FP/tests/test.ipynb
@@ -318,6 +318,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [\n",
+    "            \"A04AM080-00001... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...45... | ...Acrylic Emulsion Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00001\",\n",
+    "            \"A04AM080-00002... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...47... | ...Water Emulsion Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00002\",\n",
+    "            \"A04AM080-00003... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...52... | ...Acid/Alkaline Resistant Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00003\",\n",
+    "            \"A04AM080-00004... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...55... | ...Oil Based Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00004\",\n",
+    "            \"A04AM080-00005... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...53... | ...Anti-Dust Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00005\",\n",
+    "            \"A04AM080-00006... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...50... | ...Epoxy Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00006\",\n",
+    "            \"A04AM080-00007... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...54... | ...Epoxy Based Sealer... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00007\",\n",
+    "            \"A04AM080-00008... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...56... | ...Epoxy Lining... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00008\",\n",
+    "            \"A04AM080-00009... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...57... | ...Road Marker Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00009\",\n",
+    "            \"A04AM080-00010... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...58... | ...White Strips for Parking Place... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...W=(  )mm... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M... | ...A04AM080... | ...A04AM080-00010\",\n",
+    "            \"A04AM080-00011... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...74... | ...Chemical Resistant Paint... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00011\",\n",
+    "            \"A04AM080-00012... | ...AR... | ...A04... | ...Finishing Work... | ...AM... | ...Painting Work... | ...080... | ...Floor Painting... | ...FT... | ...Polyurethane Coating... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...0... | ...... | ...... | ...... | ...0... | ...... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...0... | ...... | ...M2... | ...M2... | ...A04AM080... | ...A04AM080-00012\"\n",
+    "        ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0].find(\"... | ...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -340,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
