--- a/H_FamilyList_FP/tests/test.ipynb
+++ b/H_FamilyList_FP/tests/test.ipynb
@@ -42,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{'text': 'Item 1', 'image': '', 'values': [1, 'A'], 'open': 0, 'tags': ''}\""
+       "'3'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(a)"
+    "str(3)"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
