--- a/H_FamilyList_FP/tests/test.ipynb
+++ b/H_FamilyList_FP/tests/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,29 +92,173 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# item_id1\n",
-    "\n",
-    "# a = tree.item('I001')"
+    "common_WM_values={\n",
+    "\"Floors\": {\n",
+    "    \"H_FL_AR_S17_RC Slab\": [\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|콘크리트구체-지상\",\n",
+    "            \"물량산출식\": \"=V\",\n",
+    "            \"Unit\": \"M3\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF032-00022 | AR | A03 | Concrete Work | AF | Superstructure Work | 032 | Structural Concrete | 01 | Cement Type-1 | 15 | 25MPa ≤ F'c (Cylinder Strength) < 30MPa | M3 | M3 | A03AF032 | A03AF032-00022\",\n",
+    "            \"Description\": \"ASTM C150 Type I or Type IA \\nF'c (Cylinder Strength) = 28MPa\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|철근-지상\",\n",
+    "            \"물량산출식\": \"=V*RE\",\n",
+    "            \"Unit\": \"TON\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF037-00003 | AR | A03 | Concrete Work | AF | Superstructure Work | 037 | Rebar Work | 27 | Deformed Bar (Non-Coat.) | 11 | 300MPa<Fy≤400MPa | TON | TON | A03AF037 | A03AF037-00003\",\n",
+    "            \"Description\": \"KS D3504 SD400 (Fy=400MPa)\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|거푸집-지상\",\n",
+    "            \"물량산출식\": \"=A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF036-00001 | AR | A03 | Concrete Work | AF | Superstructure Work | 036 | Form Work (1 time in use) | 25 | Flat Form | 05 | Dressed Lumber, Plywood or Steel Form(Wood Planks are not Allowed) incl. Chamfer | M2 | M2 | A03AF036 | A03AF036-00001\",\n",
+    "            \"Description\": \"\",\n",
+    "            \"Remark\": \"\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"H_FL_AR_S17_RC Slab_S Trowel\": [\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|콘크리트구체-지상\",\n",
+    "            \"물량산출식\": \"=V\",\n",
+    "            \"Unit\": \"M3\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF032-00022 | AR | A03 | Concrete Work | AF | Superstructure Work | 032 | Structural Concrete | 01 | Cement Type-1 | 15 | 25MPa ≤ F'c (Cylinder Strength) < 30MPa | M3 | M3 | A03AF032 | A03AF032-00022\",\n",
+    "            \"Description\": \"ASTM C150 Type I or Type IA \\nF'c (Cylinder Strength) = 28MPa\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|철근-지상\",\n",
+    "            \"물량산출식\": \"=V*RE\",\n",
+    "            \"Unit\": \"TON\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF037-00003 | AR | A03 | Concrete Work | AF | Superstructure Work | 037 | Rebar Work | 27 | Deformed Bar (Non-Coat.) | 11 | 300MPa<Fy≤400MPa | TON | TON | A03AF037 | A03AF037-00003\",\n",
+    "            \"Description\": \"KS D3504 SD400 (Fy=400MPa)\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|거푸집-지상\",\n",
+    "            \"물량산출식\": \"=A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF036-00001 | AR | A03 | Concrete Work | AF | Superstructure Work | 036 | Form Work (1 time in use) | 25 | Flat Form | 05 | Dressed Lumber, Plywood or Steel Form(Wood Planks are not Allowed) incl. Chamfer | M2 | M2 | A03AF036 | A03AF036-00001\",\n",
+    "            \"Description\": \"\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC 표면처리\",\n",
+    "            \"물량산출식\": \"=A\",\n",
+    "            \"Unit\": \"M3\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A04AQ089-00001 | AR | A04 | Finishing Work | AQ | Roof Work | 089 | Protective Concrete w/ Steel Trowel Finish | M3 | M3 | A04AQ089 | A04AQ089-00001\",\n",
+    "            \"Description\": \"\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"H_FL_AR_S17_Roof RC Slab\": [\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|콘크리트구체-지상\",\n",
+    "            \"물량산출식\": \"=V\",\n",
+    "            \"Unit\": \"M3\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF032-00022 | AR | A03 | Concrete Work | AF | Superstructure Work | 032 | Structural Concrete | 01 | Cement Type-1 | 15 | 25MPa ≤ F'c (Cylinder Strength) < 30MPa | M3 | M3 | A03AF032 | A03AF032-00022\",\n",
+    "            \"Description\": \"ASTM C150 Type I or Type IA \\nF'c (Cylinder Strength) = 28MPa\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|철근-지상\",\n",
+    "            \"물량산출식\": \"=V*RE\",\n",
+    "            \"Unit\": \"TON\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF037-00003 | AR | A03 | Concrete Work | AF | Superstructure Work | 037 | Rebar Work | 27 | Deformed Bar (Non-Coat.) | 11 | 300MPa<Fy≤400MPa | TON | TON | A03AF037 | A03AF037-00003\",\n",
+    "            \"Description\": \"KS D3504 SD400 (Fy=400MPa)\",\n",
+    "            \"Remark\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"RC공통|거푸집-지상\",\n",
+    "            \"물량산출식\": \"=A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A03AF036-00001 | AR | A03 | Concrete Work | AF | Superstructure Work | 036 | Form Work (1 time in use) | 25 | Flat Form | 05 | Dressed Lumber, Plywood or Steel Form(Wood Planks are not Allowed) incl. Chamfer | M2 | M2 | A03AF036 | A03AF036-00001\",\n",
+    "            \"Description\": \"\",\n",
+    "            \"Remark\": \"\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"H_FL_AR_S05_Grating\": [\n",
+    "        {\n",
+    "            \"wmGrp\": \"그레이팅_제작\",\n",
+    "            \"물량산출식\": \"= A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"S02AA018-00003 | SS | S02 | Miscellaneous Steel Fabrication Work | AA | Shelter/Building | 018 | Grating | 12 | Hot-Dip Galvanized Steel, (I=32) | M2 | M2 | S02AA018 | S02AA018-00003\",\n",
+    "            \"Description\": \"Material: ( ASTM A 1011M   )\\nTHK=( 32 )mm\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"그레이팅_시공\",\n",
+    "            \"물량산출식\": \"= A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"S04AA018-00003 | SS | S04 | Miscellaneous Steel Erection Work | AA | Shelter/Building | 018 | Grating | 12 | Hot-Dip Galvanized Steel, (I=32) | M2 | M2 | S04AA018 | S04AA018-00003\",\n",
+    "            \"Description\": \"Material: ( ASTM A 1011M   )\\nTHK=( 32 )mm\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"H_FL_AR_B10_Raised Floor_600x600\": [\n",
+    "        {\n",
+    "            \"wmGrp\": \"바닥페인트\",\n",
+    "            \"물량산출식\": \"=A+(P*0.6)\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A04AM080-00001 | AR | A04 | Finishing Work | AM | Painting Work | 080 | Floor Painting | 45 | Acrylic Emulsion Paint | M2 | M2 | A04AM080 | A04AM080-00001\",\n",
+    "            \"Description\": \"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"wmGrp\": \"이중바닥\",\n",
+    "            \"물량산출식\": \"=A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A04AS174-00001 | AR | A04 | Finishing Work | AS | Exterior/Interior Finish Work | 174 | Raised Floor | BQ | Top Finish: Anti-Static Vinyl Tile | 73 | 600mm x 600mm / H≤600mm | H=(  )mm | M2 | M2 | A04AS174 | A04AS174-00001\",\n",
+    "            \"Description\": \"H=(  )mm\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"H_FL_AR_B07_Vinyl Tile\": [\n",
+    "        {\n",
+    "            \"wmGrp\": \"바닥타일\",\n",
+    "            \"물량산출식\": \"=A\",\n",
+    "            \"Unit\": \"M2\",\n",
+    "            \"Gauge Code\": \"\",\n",
+    "            \"WM\": \"A04AN083-00001 | AR | A04 | Finishing Work | AN | Tile Work | 083 | Floor Tile | 68 | Ceramic Tile | 29 | Non-Slip Type, w/ Mortar Bond Coat or Adhesive | Tile Size=W(  )mm x L(  )mm x THK(  )mm | M2 | M2 | A04AN083 | A04AN083-00001\",\n",
+    "            \"Description\": \"Tile Size=W(  )mm x L(  )mm x THK(  )mm\"\n",
+    "        }\n",
+    "    ]\n",
+    "}}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'3'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Floors'])\n",
+      "dict_values([{'H_FL_AR_S17_RC Slab': [{'wmGrp': 'RC공통|콘크리트구체-지상', '물량산출식': '=V', 'Unit': 'M3', 'Gauge Code': '', 'WM': \"A03AF032-00022 | AR | A03 | Concrete Work | AF | Superstructure Work | 032 | Structural Concrete | 01 | Cement Type-1 | 15 | 25MPa ≤ F'c (Cylinder Strength) < 30MPa | M3 | M3 | A03AF032 | A03AF032-00022\", 'Description': \"ASTM C150 Type I or Type IA \\nF'c (Cylinder Strength) = 28MPa\", 'Remark': ''}, {'wmGrp': 'RC공통|철근-지상', '물량산출식': '=V*RE', 'Unit': 'TON', 'Gauge Code': '', 'WM': 'A03AF037-00003 | AR | A03 | Concrete Work | AF | Superstructure Work | 037 | Rebar Work | 27 | Deformed Bar (Non-Coat.) | 11 | 300MPa<Fy≤400MPa | TON | TON | A03AF037 | A03AF037-00003', 'Description': 'KS D3504 SD400 (Fy=400MPa)', 'Remark': ''}, {'wmGrp': 'RC공통|거푸집-지상', '물량산출식': '=A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'A03AF036-00001 | AR | A03 | Concrete Work | AF | Superstructure Work | 036 | Form Work (1 time in use) | 25 | Flat Form | 05 | Dressed Lumber, Plywood or Steel Form(Wood Planks are not Allowed) incl. Chamfer | M2 | M2 | A03AF036 | A03AF036-00001', 'Description': '', 'Remark': ''}], 'H_FL_AR_S17_RC Slab_S Trowel': [{'wmGrp': 'RC공통|콘크리트구체-지상', '물량산출식': '=V', 'Unit': 'M3', 'Gauge Code': '', 'WM': \"A03AF032-00022 | AR | A03 | Concrete Work | AF | Superstructure Work | 032 | Structural Concrete | 01 | Cement Type-1 | 15 | 25MPa ≤ F'c (Cylinder Strength) < 30MPa | M3 | M3 | A03AF032 | A03AF032-00022\", 'Description': \"ASTM C150 Type I or Type IA \\nF'c (Cylinder Strength) = 28MPa\", 'Remark': ''}, {'wmGrp': 'RC공통|철근-지상', '물량산출식': '=V*RE', 'Unit': 'TON', 'Gauge Code': '', 'WM': 'A03AF037-00003 | AR | A03 | Concrete Work | AF | Superstructure Work | 037 | Rebar Work | 27 | Deformed Bar (Non-Coat.) | 11 | 300MPa<Fy≤400MPa | TON | TON | A03AF037 | A03AF037-00003', 'Description': 'KS D3504 SD400 (Fy=400MPa)', 'Remark': ''}, {'wmGrp': 'RC공통|거푸집-지상', '물량산출식': '=A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'A03AF036-00001 | AR | A03 | Concrete Work | AF | Superstructure Work | 036 | Form Work (1 time in use) | 25 | Flat Form | 05 | Dressed Lumber, Plywood or Steel Form(Wood Planks are not Allowed) incl. Chamfer | M2 | M2 | A03AF036 | A03AF036-00001', 'Description': '', 'Remark': ''}, {'wmGrp': 'RC 표면처리', '물량산출식': '=A', 'Unit': 'M3', 'Gauge Code': '', 'WM': 'A04AQ089-00001 | AR | A04 | Finishing Work | AQ | Roof Work | 089 | Protective Concrete w/ Steel Trowel Finish | M3 | M3 | A04AQ089 | A04AQ089-00001', 'Description': ''}], 'H_FL_AR_S17_Roof RC Slab': [{'wmGrp': 'RC공통|콘크리트구체-지상', '물량산출식': '=V', 'Unit': 'M3', 'Gauge Code': '', 'WM': \"A03AF032-00022 | AR | A03 | Concrete Work | AF | Superstructure Work | 032 | Structural Concrete | 01 | Cement Type-1 | 15 | 25MPa ≤ F'c (Cylinder Strength) < 30MPa | M3 | M3 | A03AF032 | A03AF032-00022\", 'Description': \"ASTM C150 Type I or Type IA \\nF'c (Cylinder Strength) = 28MPa\", 'Remark': ''}, {'wmGrp': 'RC공통|철근-지상', '물량산출식': '=V*RE', 'Unit': 'TON', 'Gauge Code': '', 'WM': 'A03AF037-00003 | AR | A03 | Concrete Work | AF | Superstructure Work | 037 | Rebar Work | 27 | Deformed Bar (Non-Coat.) | 11 | 300MPa<Fy≤400MPa | TON | TON | A03AF037 | A03AF037-00003', 'Description': 'KS D3504 SD400 (Fy=400MPa)', 'Remark': ''}, {'wmGrp': 'RC공통|거푸집-지상', '물량산출식': '=A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'A03AF036-00001 | AR | A03 | Concrete Work | AF | Superstructure Work | 036 | Form Work (1 time in use) | 25 | Flat Form | 05 | Dressed Lumber, Plywood or Steel Form(Wood Planks are not Allowed) incl. Chamfer | M2 | M2 | A03AF036 | A03AF036-00001', 'Description': '', 'Remark': ''}], 'H_FL_AR_S05_Grating': [{'wmGrp': '그레이팅_제작', '물량산출식': '= A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'S02AA018-00003 | SS | S02 | Miscellaneous Steel Fabrication Work | AA | Shelter/Building | 018 | Grating | 12 | Hot-Dip Galvanized Steel, (I=32) | M2 | M2 | S02AA018 | S02AA018-00003', 'Description': 'Material: ( ASTM A 1011M   )\\nTHK=( 32 )mm'}, {'wmGrp': '그레이팅_시공', '물량산출식': '= A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'S04AA018-00003 | SS | S04 | Miscellaneous Steel Erection Work | AA | Shelter/Building | 018 | Grating | 12 | Hot-Dip Galvanized Steel, (I=32) | M2 | M2 | S04AA018 | S04AA018-00003', 'Description': 'Material: ( ASTM A 1011M   )\\nTHK=( 32 )mm'}], 'H_FL_AR_B10_Raised Floor_600x600': [{'wmGrp': '바닥페인트', '물량산출식': '=A+(P*0.6)', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'A04AM080-00001 | AR | A04 | Finishing Work | AM | Painting Work | 080 | Floor Painting | 45 | Acrylic Emulsion Paint | M2 | M2 | A04AM080 | A04AM080-00001', 'Description': ''}, {'wmGrp': '이중바닥', '물량산출식': '=A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'A04AS174-00001 | AR | A04 | Finishing Work | AS | Exterior/Interior Finish Work | 174 | Raised Floor | BQ | Top Finish: Anti-Static Vinyl Tile | 73 | 600mm x 600mm / H≤600mm | H=(  )mm | M2 | M2 | A04AS174 | A04AS174-00001', 'Description': 'H=(  )mm'}], 'H_FL_AR_B07_Vinyl Tile': [{'wmGrp': '바닥타일', '물량산출식': '=A', 'Unit': 'M2', 'Gauge Code': '', 'WM': 'A04AN083-00001 | AR | A04 | Finishing Work | AN | Tile Work | 083 | Floor Tile | 68 | Ceramic Tile | 29 | Non-Slip Type, w/ Mortar Bond Coat or Adhesive | Tile Size=W(  )mm x L(  )mm x THK(  )mm | M2 | M2 | A04AN083 | A04AN083-00001', 'Description': 'Tile Size=W(  )mm x L(  )mm x THK(  )mm'}]}])\n"
+     ]
     }
    ],
    "source": [
-    "str(3)"
+    "# for k in common_WM_values:\n",
+    "#     print(k)\n",
+    "#     print(common_WM_values[k])\n",
+    "\n",
+    "print(common_WM_values.keys())\n",
+    "print(common_WM_values.values())"
    ]
   },
   {
@@ -5698,7 +5842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
