--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Earth Work', 'EARTH', 'Excavation_A']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"Earth Work | EARTH | Excavation_A\"\n",
+    "a.split(\" | \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
